# wasmux

./: CMakeLists.txt  MainScript.js  MakeScript.js  MakeScript.mjs  README.md  config.h.cmake  dtsconfig.js  package.json  tsconfig.base.json  variables.mjs  wasmux-config.h.js  wasmux-config.h.mjs  webpack.config.mjs
kernel/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  index.mjs  start_kernel.S  start_kernel.cpp
kernel/jsdata/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  loader.build.js  loader.build.mjs  mkcustsec.js  mkcustsec.mjs  settings.mjs  webcallesx.js  webcallesx.mjs  webpack.config.mjs  worker.build.js  worker.build.mjs
kernel/jsdata/src/: BaseThreadContext.mjs  MainThreadContext.mjs  Object.mjs  SystemCalls.mjs  WorkerThreadContext.mjs
kernel/kapsule/: MakeScript.mjs  mkcustsec.mjs
kernel/kapsule/src/: InstanceExit.cpp  InstancePerform.cpp  KernelVersion.cpp  StartKernel.S  StartKernel.cpp  StartWindows.cpp  syscall.cpp  walinuz.lds
kernel/walinuz/: CMakeLists.txt  InstancePerform.cpp  KernelVersion.cpp  MakeScript.js  MakeScript.mjs  StartKernel.S  StartKernel.cpp  StartWindows.cpp
kernel/walinuz/src/: StartWindows.cpp  syscall-stub.cpp  syscall.cpp
kernel/waml/: MakeScript.js
tools/waeditor/: CMakeLists.txt  MakeScript.js  waeditor.cpp
uapi/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  index.mjs
uapi/argp/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  argp.cpp  argp.h
uapi/argp/include/: argp.h
uapi/argp/src/: argp.c
uapi/backtrace/: MakeScript.mjs
uapi/backtrace/include/: execinfo.h
uapi/backtrace/src/: backtrace.c  backtrace.cpp
uapi/crt/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  initialize.c  start.c  version.c
uapi/crt/src/: initialize.c  start.c  version.c
uapi/ctype/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/ctype/include/: ctype.h
uapi/ctype/src/: ctype.cpp  isalnum.c  isalnum.cpp  isalpha.c  isalpha.cpp  isascii.c  isascii.cpp  isblank.c  isblank.cpp  iscntrl.c  iscntrl.cpp  isdigit.c  isdigit.cpp  isgraph.c  isgraph.cpp  islower.c  islower.cpp  isprint.c  isprint.cpp  ispunct.c  ispunct.cpp  isspace.c  isspace.cpp  isupper.c  isupper.cpp  isxdigit.c  isxdigit.cpp  tolower.c  tolower.cpp  toupper.c  toupper.cpp
uapi/ctype_l/: MakeScript.mjs
uapi/ctype_l/src/: isalnum_l.c  isalnum_l.cpp  isalpha_l.c  isalpha_l.cpp  isascii_l.c  isascii_l.cpp  isblank_l.c  isblank_l.cpp  iscntrl_l.c  iscntrl_l.cpp  isdigit_l.c  isdigit_l.cpp  isgraph_l.c  isgraph_l.cpp  islower_l.c  islower_l.cpp  isprint_l.c  isprint_l.cpp  ispunct_l.c  ispunct_l.cpp  isspace_l.c  isspace_l.cpp  isupper_l.c  isupper_l.cpp  isxdigit_l.c  isxdigit_l.cpp  tolower_l.c  tolower_l.cpp  toupper_l.c  toupper_l.cpp
uapi/dirent/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/dirent/include/: dirent.h
uapi/dirent/internal/: dirent.h
uapi/dirent/src/: dirent.c  dirent.cpp  dirfd.c  dirfd.cpp  getdents.c  getdents.cpp
uapi/dl/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/dl/include/: dlfcn.h
uapi/dl/src/: dlfcn.c  dlfcn.cpp
uapi/env/: MakeScript.mjs
uapi/env/src/: environ.c  environ.cpp  getenv.c  getenv.cpp  putenv.c  setenv.c  unsetenv.cpp
uapi/fcntl/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/fcntl/include/: fcntl.h
uapi/fcntl/internal/: fcntl.h
uapi/fcntl/src/: creat.c  creat.cpp  fcntl.c  fcntl.cpp  open.c  open.cpp  openat.c  openat.cpp
uapi/fnmatch/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/fnmatch/include/: fnmatch.h
uapi/fnmatch/src/: fnmatch.c  fnmatch.cpp
uapi/fts/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  fts.cpp
uapi/fts/include/: fts.h
uapi/fts/src/: fts.c  fts.cpp
uapi/ftw/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/ftw/include/: ftw.h
uapi/ftw/src/: ftw.c  ftw.cpp  nftw.c  nftw.cpp
uapi/getopt/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  getopt.cpp  getopt.h  getopt_core.h
uapi/getopt/include/: getopt.h
uapi/getopt/src/: getopt.c  getopt.cpp
uapi/glob/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  glob.h
uapi/grp/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/libc/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  creat.cpp  getcwd.cpp  gnu-versions.h.cmake  isatty.cpp  memcpy.cpp  sbrk.cpp  ttyname.cpp  write.cpp
uapi/libcxx/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/libcxxabi/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/libgcc/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  fp_lib.cpp  fp_lib.h
uapi/libintl/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  libintl.cpp  libintl.h
uapi/libio/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/libm/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/locale/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  langinfo.cpp  langinfo.h  locale.cpp  locale.h
uapi/login/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/malloc/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  malloc.cpp  malloc.h
uapi/mntent/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/netdb/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  netdb.cpp  netdb.h
uapi/obstack/: CMakeLists.txt  MakeScript.js  MakeScript.mjs  obstack.cpp  obstack.h
uapi/pthread/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/pwd/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/regex/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/rt/: MakeScript.mjs
uapi/search/: MakeScript.mjs
uapi/semaphore/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/shadow/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/signal/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/stdlib/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/string/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/termios/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/time/: MakeScript.mjs
uapi/ulinux/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/wchar/: MakeScript.mjs
uapi/wcsmbs/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
uapi/wctype/: MakeScript.mjs
uapi/wctype_l/: MakeScript.mjs
uapi/wordexp/: CMakeLists.txt  MakeScript.js  MakeScript.mjs
(+1302 files in other folders)
